# fraud_detection2

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/: best_model.pkl  lightgbm.pkl  logistic_regression.pkl  training_summary.pkl
notebooks/: eda-fraud-data.ipynb  feature-engineering.ipynb  modeling.ipynb  shap-explainability.ipynb
scripts/: generate_notebooks.py  run_explainability.py  run_preprocessing.py  run_training.py
src/eda/: eda.py
src/eda/featuring/: __init__.py  custom_feature.py  preprocess.py
src/modeling/: evaluate.py  explain.py  train.py
tests/: configurationTest.py  dataHandlerTest.py
